Use pioarduino again to work past bugs in driver/i2s.h

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+packages_dir = .pio/packages
+platforms_dir = .pio/platforms
+build_dir    = .pio/build
+libdeps_dir  = .pio/libdeps
+
+
 [env:ai-thinker-cam]
-platform = espressif32
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10/platform-espressif32.zip
 board = esp32cam
 framework = arduino
 upload_speed = 921600
