--- a/platformio.ini
+++ b/platformio.ini
@@ -26,6 +26,7 @@ monitor_dtr = 0
 build_flags = 
     '-DWIFI_SSID="${sysenv.WIFI_SSID}"'
     '-DWIFI_PASSWORD="${sysenv.WIFI_PASSWORD}"'
+    '-DBENCHMARK=1'
 lib_deps = 
     https://github.com/arkhipenko/AverageFilter.git
     https://github.com/thijse/Arduino-Log.git#1.1.1
